--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,1 +1,12 @@
 @import 'ember-paper';
+
+.codemirror-editor {
+  padding: 0;
+}
+
+.transition {
+  -webkit-transition: all 0.4s !important;
+  -moz-transition: all 0.4s !important;
+  -o-transition: all 0.4s !important;
+  transition: all 0.4s !important;
+}
