--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,7 +1,34 @@
 @import 'ember-paper';
 
-.codemirror-editor {
+html, body, body > .ember-view, .full-height {
+  height: 100%;
+}
+
+.scroll {
+  overflow-y: scroll;
+}
+
+.half-height {
+  height: 50%;
+}
+
+md-sidenav {
+  width: 250px;
+}
+
+#kata-description {
+  height: 50%;
+  min-height: 50%;
+  border-bottom: 1px solid black;
+  border-right: 1px solid black;
+}
+
+#codemirror-editor {
+  height: 50%;
+  min-height: 50%;
+  align-self: flex-start;
   padding: 0;
+  border-right: 1px solid black;
 }
 
 .transition {
@@ -9,4 +36,13 @@
   -moz-transition: all 0.4s !important;
   -o-transition: all 0.4s !important;
   transition: all 0.4s !important;
+}
+
+#mocha {
+  margin: 0;
+}
+
+#mocha-stats {
+  position: relative;
+  top: 0;
 }
