--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -4,12 +4,16 @@ html, body, body > .ember-view, .full-height {
   height: 100%;
 }
 
-.scroll {
-  overflow-y: scroll;
-}
-
 .half-height {
   height: 50%;
+}
+
+.full-width {
+  width: 100%;
+}
+
+.scroll {
+  overflow-y: scroll;
 }
 
 md-sidenav {
