--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -7,10 +7,10 @@
 		{{/paper-toolbar}}
 		{{!-- items --}}
 		{{#paper-content padding=true}}
-			Kata 1
+			{{#link-to 'index'}}Home{{/link-to}}
 		{{/paper-content}}
 		{{#paper-content padding=true}}
-			Kata 2
+			{{#link-to 'kata' 1}}Kata 1{{/link-to}}
 		{{/paper-content}}
 		{{#paper-content padding=true}}
 			...
