--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,5 +1,8 @@
 @import 'ember-paper';
 
+$dark: #002b36;
+$light: #073642;
+
 html, body, body > .ember-view, .full-height {
   height: 100%;
 }
@@ -16,6 +19,14 @@ html, body, body > .ember-view, .full-height {
   overflow-y: scroll;
 }
 
+md-toolbar {
+  background-color: $dark !important;
+}
+
+md-content, md-sidenav {
+  background-color: $light !important;
+}
+
 md-sidenav {
   width: 250px;
 }
@@ -23,8 +34,11 @@ md-sidenav {
 #kata-description {
   height: 50%;
   min-height: 50%;
-  border-bottom: 1px solid black;
-  border-right: 1px solid black;
+  box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2), 0px 4px 5px 0px rgba(0, 0, 0, 0.14), 0px 1px 10px 0px rgba(0, 0, 0, 0.12);
+
+  * {
+    max-width: 100%;
+  }
 }
 
 #codemirror-editor {
@@ -32,7 +46,7 @@ md-sidenav {
   min-height: 50%;
   align-self: flex-start;
   padding: 0;
-  border-right: 1px solid black;
+  box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2), 0px 4px 5px 0px rgba(0, 0, 0, 0.14), 0px 1px 10px 0px rgba(0, 0, 0, 0.12);
 }
 
 .transition {
