--- a/app/templates/kata.hbs
+++ b/app/templates/kata.hbs
@@ -9,8 +9,7 @@
 
 	{{mocha-runner class="col-xs-12 col-md-6 full-height scroll"
 		code=code
-		onPass=(action 'onPass')
-		onFail=(action 'onFail')
+		onEvent=(action 'onEvent')
 		onEnd=(action 'onEnd')}}
 </div>
 
