--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -2,6 +2,7 @@
 
 $dark: #002b36;
 $light: #073642;
+$text: #93a1a1;
 
 html, body, body > .ember-view, .full-height {
   height: 100%;
@@ -32,8 +33,6 @@ md-sidenav {
 }
 
 #kata-description {
-  height: 50%;
-  min-height: 50%;
   box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2), 0px 4px 5px 0px rgba(0, 0, 0, 0.14), 0px 1px 10px 0px rgba(0, 0, 0, 0.12);
 
   * {
@@ -42,11 +41,24 @@ md-sidenav {
 }
 
 #codemirror-editor {
-  height: 50%;
-  min-height: 50%;
   align-self: flex-start;
   padding: 0;
   box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2), 0px 4px 5px 0px rgba(0, 0, 0, 0.14), 0px 1px 10px 0px rgba(0, 0, 0, 0.12);
+
+  .CodeMirror {
+    @extend .full-height;
+  }
+
+  md-menu {
+    position: absolute;
+    top: 0px;
+    right: 0;
+    z-index: 99999;
+
+    md-icon {
+      color: $text;
+    }
+  }
 }
 
 .transition {
@@ -54,6 +66,10 @@ md-sidenav {
   -moz-transition: all 0.4s !important;
   -o-transition: all 0.4s !important;
   transition: all 0.4s !important;
+}
+
+iframe {
+  border: none;
 }
 
 #mocha {
