persist code changes

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -10,7 +10,7 @@
 			{{#link-to 'index'}}Home{{/link-to}}
 		{{/paper-content}}
 		{{#paper-content padding=true}}
-			{{#link-to 'kata' 1}}Kata 1{{/link-to}}
+			{{#link-to 'katas' 1}}Kata 1{{/link-to}}
 		{{/paper-content}}
 		{{#paper-content padding=true}}
 			...
