--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,4 +1,4 @@
-{{#paper-button raised=true onClick=(transition-to 'kata' 1)}}
+{{#paper-button raised=true onClick=(transition-to 'katas' 1)}}
     Kata 1
 {{/paper-button}}
 
