--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -9,12 +9,11 @@
 		{{#paper-content padding=true}}
 			{{#link-to 'index'}}Home{{/link-to}}
 		{{/paper-content}}
-		{{#paper-content padding=true}}
-			{{#link-to 'katas' 1}}Kata 1{{/link-to}}
-		{{/paper-content}}
-		{{#paper-content padding=true}}
-			...
-		{{/paper-content}}
+		{{#each model as |kata|}}
+			{{#paper-content padding=true}}
+				{{#link-to 'katas' kata.id}}{{kata.name}}{{/link-to}}
+			{{/paper-content}}
+		{{/each}}
 	{{/paper-sidenav}}
 
 	{{!-- page content --}}
