--- a/app/templates/katas.hbs
+++ b/app/templates/katas.hbs
@@ -18,40 +18,40 @@
 		onChange=(action 'onChange')}}
 		{{!-- Material editor menu --}}
 
-		{{!-- Editor toolbar --}}
-		{{#paper-toolbar as |toolbar|}}
-			{{#toolbar.tools}}
-				{{!-- menu button --}}
-				{{#paper-button iconButton=true onClick=(action (mut leftSideBarOpen))}}
-					{{paper-icon testResultIcon}}
+		{{!-- Contextual editor toolbar --}}
+		{{!-- Test status --}}
+		{{#paper-button iconButton=true onClick=(action (mut leftSideBarOpen))}}
+			{{paper-icon testResultIcon}}
+		{{/paper-button}}
+		{{!-- Title --}}
+		<h2>{{testResultDescription}}</h2>
+		{{!-- Separator --}}
+		<span class="flex"></span>
+		{{!-- Contextual menu --}}
+		{{#paper-menu position="target-right target" as |menu|}}
+			{{!-- Contextual menu button --}}
+			{{#menu.trigger}}
+				{{!-- Triple dot button --}}
+				{{#paper-button iconButton=true}}
+					{{paper-icon "more_vert"}}
 				{{/paper-button}}
-				{{!-- title --}}
-				<h2>{{testResultDescription}}</h2>
-				{{!-- separator --}}
-				<span class="flex"></span>
-				{{!-- Contextual menu --}}
-				{{#paper-menu position="target-right target" as |menu|}}
-					{{#menu.trigger}}
-						{{#paper-button iconButton=true}}
-							{{paper-icon "more_vert"}}
-						{{/paper-button}}
-					{{/menu.trigger}}
-					{{#menu.content width=4 as |content|}}
-						{{#content.menu-item onClick="openSomething"}}
-							{{paper-icon "input"}}
-							<span>Run</span>
-						{{/content.menu-item}}
-
-						{{paper-divider}}
-
-						{{#content.menu-item onClick=(action (mut code) model.code)}}
-							{{paper-icon "settings_backup_restore"}}
-							<span>Reset</span>
-						{{/content.menu-item}}
-					{{/menu.content}}
-				{{/paper-menu}}
-			{{/toolbar.tools}}
-		{{/paper-toolbar}}
+			{{/menu.trigger}}
+			{{!-- Contextual menu content --}}
+			{{#menu.content width=4 as |content|}}
+				{{!-- Run tests --}}
+				{{#content.menu-item onClick=(action 'run')}}
+					{{paper-icon "input"}}
+					<span>Run</span>
+				{{/content.menu-item}}
+				{{!-- Separator --}}
+				{{paper-divider}}
+				{{!-- Reset code --}}
+				{{#content.menu-item onClick=(action (mut code) model.code)}}
+					{{paper-icon "settings_backup_restore"}}
+					<span>Reset</span>
+				{{/content.menu-item}}
+			{{/menu.content}}
+		{{/paper-menu}}
 	{{/codemirror-editor}}
 </div>
 
