--- a/app/templates/components/codemirror-editor.hbs
+++ b/app/templates/components/codemirror-editor.hbs
@@ -5,6 +5,4 @@
 	{{/toolbar.tools}}
 {{/paper-toolbar}}
 
-<textarea class="editor-content">
-	{{code}}
-</textarea>
+<textarea class="editor-content">{{code}}</textarea>
