--- a/app/templates/components/kata-output.hbs
+++ b/app/templates/components/kata-output.hbs
@@ -1,5 +1,9 @@
-{{yield (hash onEvent=(action 'onEvent'))}}
+<div class="code">Test results:</div>
 
-{{#each messages as |message|}}
-	<div class="alert alert-{{if (eq message.state 'passed') 'success' 'danger'}}" role="alert">{{message.title}}</div>
-{{/each}}
+<ul>
+	{{#each messages as |message|}}
+		<li class="code code-{{if (eq message.state 'passed') 'success' 'danger'}}">[{{#if (eq message.state 'passed')}}&#10003;{{else}}&#10008;{{/if}}] {{message.title}}</li>
+	{{/each}}
+</ul>
+
+{{yield (hash onEvent=(action 'onEvent'))}}
