--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -34,6 +34,7 @@ md-sidenav {
 
 #kata-description {
   box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2), 0px 4px 5px 0px rgba(0, 0, 0, 0.14), 0px 1px 10px 0px rgba(0, 0, 0, 0.12);
+  border-bottom: 2px inset $light;
 
   * {
     max-width: 100%;
@@ -44,6 +45,7 @@ md-sidenav {
   align-self: flex-start;
   padding: 0;
   box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2), 0px 4px 5px 0px rgba(0, 0, 0, 0.14), 0px 1px 10px 0px rgba(0, 0, 0, 0.12);
+  border-left: 2px outset $light;
 
   .CodeMirror {
     @extend .full-height;
