--- a/app/templates/katas.hbs
+++ b/app/templates/katas.hbs
@@ -3,18 +3,22 @@
 		<div class="row full-height">
 			{{kata-description kata=model.readme class="col-xs-12 half-height scroll"}}
 
-			{{#babel-transpiler code=code onTranspile=(action (mut transpiled)) onError=(action 'onError')}}
-				{{#kata-output
-					class="col-xs-12 half-height scroll"
-					onStart=(action 'onStart')
-					onEnd=(action 'onEnd')
-					as |kata|}}
-					{{mocha-runner
-						suite=model.suite
-						code=transpiled
-						onEvent=kata.onEvent}}
-				{{/kata-output}}
-			{{/babel-transpiler}}
+			{{babel-transpiler
+				code=code
+				onTranspile=(action (mut transpiled))
+				onError=(action 'onError')
+				isVisible=false}}
+
+			{{#kata-output
+				class="col-xs-12 half-height scroll"
+				onStart=(action 'onStart')
+				onEnd=(action 'onEnd')
+				as |kata|}}
+				{{mocha-runner
+					suite=model.suite
+					code=transpiled
+					onEvent=kata.onEvent}}
+			{{/kata-output}}
 		</div>
 	</div>
 
