--- a/app/templates/katas.hbs
+++ b/app/templates/katas.hbs
@@ -1,3 +1,11 @@
+{{#ember-wormhole to="toolbar-buttons"}}
+	{{#paper-button iconButton=true}}
+		{{#link-to 'help' model.slug}}
+			{{paper-icon "help"}}
+		{{/link-to}}
+	{{/paper-button}}
+{{/ember-wormhole}}
+
 <div class="row full-height full-width">
 	<div class="col-xs-12 col-md-6 full-height">
 		<div class="row full-height">
