--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -26,10 +26,13 @@
 					{{paper-icon "menu"}}
 				{{/paper-button}}
 				{{!-- title --}}
-				<h2>Toolbar with Standard Buttons</h2>
+				<h2>EcmaScript Workshop</h2>
 				{{!-- separator --}}
 				<span class="flex"></span>
 				{{!-- buttons --}}
+				<div id="toolbar-buttons">
+					{{!-- wormhole container --}}
+				</div>
 			{{/toolbar.tools}}
 		{{/paper-toolbar}}
 
