Add main page readme.

--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,3 +1,5 @@
-<img src="https://m.popkey.co/987552/NGLb3.gif" />
-
-{{outlet}}
+<div class="row full-height">
+	<div class="col-md-12 full-height padding-bottom">
+		{{format-markdown model}}
+	</div>
+</div>
